# gitlab-user-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  gum-config-test.yaml  gum-config.yaml  gum-config.yaml.bak  gum-state.yaml.bak  pace(&self, gid: u64, nid: u64, access_level: AccessLevel) -> Result<String>;  state.json
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: build-stable.yaml  build-tag.yaml  build-version.yaml  container-stable.yaml  container-tag.yaml  container-version.yaml  gh-pages.yml  mkdocs-generate.yaml  tests.yaml
docs/: mkdocs.yml  requirements-dev.txt
docs/src/: index.md  init.md  teams.md
example/: gum-config-v1.yaml  gum-config-v2.yaml  state.json
scripts/: download_gum.sh  rename_releases.sh
src/: args.rs  cli.rs  cmd.rs  config.rs  files.rs  gitlab.rs  main.rs  output.rs  service.rs  srv.rs  srv.rs.bak  store.rs  types.rs
src/args/: access_level.rs  dry_run.rs  file_name.rs  gitlab_token.rs  gitlab_url.rs  group_id.rs  group_list.rs  large_out.rs  mock_gitlab.rs  mod.rs  namespace_id.rs  no_confirm.rs  project_id.rs  search_string.rs  shell.rs  state_destination.rs  state_source.rs  team_name.rs  user_id.rs  write_state.rs
src/cmd/: .sync.rs.rustfmt  generate.rs  groups.rs  init.rs  mod.rs  search.rs  self_update.rs  sync.rs  teams.rs  upgrade.rs  users.rs
src/gitlab/: apis.rs  group.rs  mod.rs  project.rs  shared_groups.rs  shared_projects.rs  types.rs  user.rs
src/models/: mod.rs
src/output/: mod.rs  out_extra.rs  out_message.rs  out_spinner.rs  out_sum.rs
src/pkg/: config.rs  init.rs  mod.rs  search.rs  teams.rs  users.rs
(+76 files in other folders)
