[package]
name = "gum"
authors = ["allanger"]
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive", "env"] }
serde = { version = "1.0 ", features = ["derive"] }
serde_yaml = "0.9.14"
log = "0.4.14"
tempfile = "3.3.0"
termion = "2.0.1"
rand = "0.8.5"
tabled = "0.12.1"
serde_json = "1.0.79"
self_update = "0.37.0"
gitlab = "0.1600.1"
indicatif = "0.17.2"
console = "0.15.0"
mockall = "0.11.0"
clap_complete = "4.0.6"
regex = "1.5.5"
lazy_static = "1.4.0"
